creates an rdf to stdio
*todo - follow up with george
*updated pom
*sample in and out provided in resources